language/move-lang/tests/move_check/translated_ir_tests/commands/else_assigns_if_doesnt.exp
error: 

    ┌── tests/move_check/translated_ir_tests/commands/else_assigns_if_doesnt.move:11:30 ───
    │
 11 │     0x0::Transaction::assert(y == 0, 42);
    │                              ^ Invalid usage of local 'y'
    ·
  4 │     let y;
    │         - The local might not have a value due to this position. The local must be assigned a value before being used
    │

